--- a/views/login.jade
+++ b/views/login.jade
@@ -6,29 +6,27 @@ html
         link(rel='stylesheet', href='/stylesheets/style.css')
         link(rel="stylesheet",href="/css/bootstrap.min.css")
 
-        script(type='text/javascript', src='jquery.min.js')
+        script(type='text/javascript', src='/jquery.min.js')
         script(type='text/javascript' src="/js/bootstrap.min.js")
 
     body
         - var pageType = title.toLowerCase();
-        div.outer
-            div.middle
-                div.inner
-                    H1=title
-                    if message.length > 0
-                        p.alert.alert-danger=message
-                    form(action="/#{pageType}" method="post")
-                        div.form-group
-                            label(for="#{pageType}Username" ) Username
-                            input.form-control(type="text" name="username" placeholder="Username" autofocus)
-                        div.form-group
-                            label(for="#{pageType}Password" ) Password
-                            input.form-control(type="password" name="password" placeholder="Password")
-                        div.form-group
-                            if pageType === 'register'
-                                p.col-xs-7 Already have an account?
-                                    a(href="login") Login
-                            else
-                                p.col-xs-7 Need an account?
-                                    a(href="register") Signup
-                            input.btn.btn-primary.col-xs-4#signInButton(type="submit" value=title)
+        div.content
+            H1=title
+            if message.length > 0
+                p.alert.alert-danger=message
+            form(action="/#{pageType}" method="post")
+                div.form-group
+                    label(for="#{pageType}Username" ) Username
+                    input.form-control(type="text" name="username" placeholder="Username" autofocus)
+                div.form-group
+                    label(for="#{pageType}Password" ) Password
+                    input.form-control(type="password" name="password" placeholder="Password")
+                div.form-group
+                    if pageType === 'register'
+                        p.col-xs-7 Already have an account?
+                            a(href="login") Login
+                    else
+                        p.col-xs-7 Need an account?
+                            a(href="register") Signup
+                    input.btn.btn-primary.col-xs-4#signInButton(type="submit" value=title)
