--- a/public/stylesheets/login.css
+++ b/public/stylesheets/login.css
@@ -1,19 +1,17 @@
-.outer {
-    display: table;
-    position: absolute;
+html, body {
     height: 100%;
-    width: 100%;
 }
 
-.middle {
-    display: table-cell;
-    vertical-align: middle;
+body {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
-.inner {
-    margin-left: auto;
-    margin-right: auto;
+.content {
+    margin: auto;
     width: 90%;
+    height: 70%;
 }
 
 #signInButton {
@@ -21,12 +19,13 @@
 }
 
 @media only screen and (min-width:480px) {
-    .inner {
+    .content {
         width: 60%;
     }
 }
+
 @media only screen and (min-width:960px) {
-    .inner {
+    .content {
         width: 30%;
     }
 }
