more ui-routing paths and refactoring, fixed apiRouter

--- a/views/partials/groups.jade
+++ b/views/partials/groups.jade
@@ -1,14 +1,7 @@
-div.groupList.groupListLeft
-    h3.text-center Owned Groups
-    div.holder
-        div.alert.alert-danger(ng-bind='error' ng-show='error')
-        div.alert.alert-warning(ng-show='groups.length === 0') You have no rooms. Create one!
-        div(ng-repeat="group in ['test1', 'test2', 'test3','test1', 'test2', 'test3','test1', 'test2', 'test3'] | orderBy: name track by $index")
-            a.list-group-item.text-center(type="button" ng-href='/workspace?group={{group}}' target="_self") {{group}}
-div.groupList
-    h3.text-center Joined Groups
-    div.holder
-        div.alert.alert-danger(ng-bind='error' ng-show='error')
-        div.alert.alert-warning(ng-show='groups.length === 0') You have no rooms. Create one!
-        div(ng-repeat='group in groups | orderBy: name track by $index')
-            a.list-group-item.text-center(type="button" ng-href='/workspace?group={{group}}' target="_self") {{group}}
+link(rel='stylesheet' href='/stylesheets/partials/groups.css')
+div.title Choose Your Group
+group-type-tabs
+div.scrollBox
+    div.alert.alert-danger(ng-bind='error' ng-show='error')
+    div(ng-repeat='group in groups | orderBy: name track by $index')
+        a.list-group-item.text-center(type='button' ng-href='/workspace?group={{group}}' target='_self' ng-bind='group')
