--- a/views/partials/manage.jade
+++ b/views/partials/manage.jade
@@ -1,14 +1,3 @@
-div.groupList
-    h3.text-center Manage Groups
-    div.holder
-        div.alert.alert-danger(ng-bind='error' ng-show='error')
-        div.alert.alert-warning(ng-show='groups.length === 0') You have no rooms. Create one!
-        div(ng-repeat='group in groups | orderBy: name track by $index')
-            a.list-group-item.text-center(type="button" ng-href='/workspace?group={{group}}' target="_self") {{group}}
-//- div
-//-     div.contentBox.contentBoxFooter
-//-         label.input-lg(for="newGroupName") Create a new group
-//-         div.alert.alert-danger(ng-bind='newGroupError' ng-show='newGroupError')
-//-         form.flowForm(ng-submit='addGroup()')
-//-             input.form-control#newGroupName(type="text" ng-model='newGroupName' placeholder="Enter a group name..." autofocus)
-//-             input.btn.btn-primary#createGroupButton(type="submit" value="Create Group")
+link(rel='stylesheet' href='/stylesheets/partials/manage.css')
+div.title Manage Groups
+div.fillHeight(ui-view='')
