--- a/views/workspace.jade
+++ b/views/workspace.jade
@@ -2,22 +2,22 @@ doctype html
 head
     title= title
     link(rel='stylesheet' href='/stylesheets/style.css')
-    link(rel="stylesheet" href="/css/bootstrap.min.css")
+    link(rel="stylesheet" href='/css/bootstrap.min.css')
     link(rel='stylesheet' href='/stylesheets/workspace.css')
-    link(rel="stylesheet" href="/jquery-ui-bundle/jquery-ui.min.css")
+    link(rel='stylesheet' href='/jquery-ui-bundle/jquery-ui.min.css')
 
     script(type='text/javascript' src='/angular.min.js')
     script(type='text/javascript' src='/jquery.min.js')
     script(type='text/javascript' src='/jquery.ui.touch-punch.min.js')
     script(type='text/javascript' src='/jquery-ui-bundle/jquery-ui.min.js')
-    script(type='text/javascript' src="/js/bootstrap.min.js")
+    script(type='text/javascript' src='/js/bootstrap.min.js')
     script(type='text/javascript' src='/javascripts/workspaceApp.js')
     script(type='text/javascript' src='/socket.io/socket.io.js')
     script(type='text/javascript' src='/dropzone.js')
-    script(type='text/javascript' src="/ui-bootstrap-tpls.min.js")
+    script(type='text/javascript' src='/ui-bootstrap-tpls.min.js')
 
 body(ng-app='workspaceApp')
-    div#container(ng-controller='workspaceController' ng-init="init('#{username}', '#{groupName}')")
+    div#container(ng-controller='workspaceController' ng-init='init("#{username}", "#{groupName}")')
         div#dropzone
             h1.noselect#dndText Drag and drop files here
         input#showButton(type='button' value='Show' ng-hide='chatVisible' ng-click='showChat()')
@@ -26,7 +26,7 @@ body(ng-app='workspaceApp')
                 input#hideButton(type='button' value='Hide' ng-click='hideChat()')
             div#chatBody
                 div.messageRow(ng-repeat='message in messages track by $index')
-                    div.userBubble.noselect(uib-tooltip='{{message.user}}' tooltip-placement="right" tooltip-trigger="mouseenter") {{message.user.substring(0, 1).toUpperCase()}}
+                    div.userBubble.noselect(uib-tooltip='{{message.user}}' tooltip-placement='right' tooltip-trigger='mouseenter') {{message.user.substring(0, 1).toUpperCase()}}
                     div.chatMessage.noselect(ng-bind='message.content')
                     button.btn.btn-primary(type='button' ng-click='addMessageToWorkspace(message.content)') +
                     button.btn.btn-primary(type='button' ng-if='message.user === username' ng-click='removeMessage(message.timestamp)') x
