--- a/public/stylesheets/home.css
+++ b/public/stylesheets/home.css
@@ -11,41 +11,42 @@ a img {
     cursor: default;
 }
 
-#container {
-    overflow: hidden;
+.homeUiView {
     display: flex;
-    flex-direction: row;
-    justify-content: center;
-    height: 80%;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: stretch;
+    overflow: hidden;
+    min-height: 0%;
+    max-height: 80%;
     width: 50%;
     margin-left: auto;
     margin-right: auto;
     background-color: #808080;
     opacity: 0.9;
     padding: 10px 10px;
-    display: flex;
-    overflow: hidden;
     border-radius: 10px;
 }
 
-.groupList {
-    width: 100%;
+.fillHeight {
+    display: flex;
+    flex-direction: column;
     height: 100%;
-    overflow-x: hidden;
-    overflow-y: hidden;
+    width: 100%;
+    overflow: hidden;
 }
 
-.groupListLeft {
-    direction:rtl;
-}
-
-.holder {
-    width: 100%;
-    height: 100%;
+.scrollBox {
     overflow-x: hidden;
     overflow-y: auto;
 }
 
-.flowForm {
-    display: flex;
+.title {
+    width: 100%;
+    font-size: 24px;
+    margin-bottom: 10px;
+}
+
+.paddedRow {
+    margin-bottom: 10px;
 }
