--- a/views/partials/manage-edit.jade
+++ b/views/partials/manage-edit.jade
@@ -1,3 +1,3 @@
+div.title(ng-bind='editHeader')
 div.alert.alert-danger(ng-bind='newGroupError' ng-show='newGroupError')
-label.input-lg(for='newGroupName') Edit group
 div(ui-view='')
