--- a/views/partials/manage.jade
+++ b/views/partials/manage.jade
@@ -1,2 +1,2 @@
-link(rel='stylesheet' href='/stylesheets/partials/manage.css')
+link(rel='stylesheet' href='/stylesheets/manage.css')
 div.fillHeight(ui-view='')
