--- a/views/home.jade
+++ b/views/home.jade
@@ -24,7 +24,7 @@ html(ng-app='homeApp' ng-init="username='#{username}'")
                         span.icon-bar
                         span.icon-bar
                     a.navbar-brand(ui-sref='groups')
-                        img(src='/images/title.png')
+                        img(src='/Images/title.png')
                     span.navbar-brand='Welcome, ' + username + '!'
                 #bs-example-navbar-collapse-1.collapse.navbar-collapse
                     ul.nav.navbar-nav
