--- a/views/home.jade
+++ b/views/home.jade
@@ -1,14 +1,14 @@
 doctype html
 html(ng-app='homeApp' ng-init="username='#{username}'")
     head
-        link(rel='stylesheet' href='/stylesheets/style.css')
+        link(rel='stylesheet' href='/Styles/style.css')
         link(rel='stylesheet' href='/css/bootstrap.min.css')
-        link(rel='stylesheet' href='/stylesheets/home.css')
+        link(rel='stylesheet' href='/Styles/home.css')
 
         script(type='text/javascript' src='/angular.min.js')
         script(type='text/javascript' src='/jquery.min.js')
         script(type='text/javascript' src='/js/bootstrap.min.js')
-        script(type='text/javascript' src='/javascripts/homeApp.js')
+        script(type='text/javascript' src='/Scripts/homeApp.js')
         script(type='text/javascript' src='/angular-ui-router.min.js')
         script(type='text/javascript' src='/angular-ui-router-title.js')
         title(ng-bind='("Runway - " + $title || "Runway")')
