--- a/views/index.jade
+++ b/views/index.jade
@@ -11,6 +11,6 @@ html(ng-app='myApp')
     script(type='text/javascript', src='//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js')
     script(type='text/javascript', src='//cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.15/angular.min.js')
     script(type='text/javascript', src='//cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.15/angular-route.min.js')
-    script(type='text/javascript', src='javascripts/main.js')
-    script(type='text/javascript', src='javascripts/services.js')
-    script(type='text/javascript', src='javascripts/controllers.js')
+    script(type='text/javascript', src='Scripts/main.js')
+    script(type='text/javascript', src='Scripts/services.js')
+    script(type='text/javascript', src='Scripts/controllers.js')
