--- a/views/login.jade
+++ b/views/login.jade
@@ -1,5 +1,5 @@
-link(rel='stylesheet', href='/stylesheets/login.css')
-link(rel='stylesheet', href='/stylesheets/style.css')
+link(rel='stylesheet', href='/Styles/login.css')
+link(rel='stylesheet', href='/Styles/style.css')
 link(rel='stylesheet', href='/css/bootstrap.min.css')
 
 script(type='text/javascript', src='/jquery.min.js')
