--- a/views/partials/groups.jade
+++ b/views/partials/groups.jade
@@ -1,4 +1,4 @@
-link(rel='stylesheet' href='/stylesheets/groups.css')
+link(rel='stylesheet' href='/Styles/groups.css')
 div.title Choose Your Group
 group-type-tabs
 div.scrollBox
