--- a/views/workspace.jade
+++ b/views/workspace.jade
@@ -1,9 +1,9 @@
 doctype html
 head
     title= title
-    link(rel='stylesheet' href='/stylesheets/style.css')
+    link(rel='stylesheet' href='/Styles/style.css')
     link(rel="stylesheet" href='/css/bootstrap.min.css')
-    link(rel='stylesheet' href='/stylesheets/workspace.css')
+    link(rel='stylesheet' href='/Styles/workspace.css')
     link(rel='stylesheet' href='/jquery-ui-bundle/jquery-ui.min.css')
 
     script(type='text/javascript' src='/angular.min.js')
@@ -11,7 +11,7 @@ head
     script(type='text/javascript' src='/jquery.ui.touch-punch.min.js')
     script(type='text/javascript' src='/jquery-ui-bundle/jquery-ui.min.js')
     script(type='text/javascript' src='/js/bootstrap.min.js')
-    script(type='text/javascript' src='/javascripts/workspaceApp.js')
+    script(type='text/javascript' src='/Scripts/workspaceApp.js')
     script(type='text/javascript' src='/socket.io/socket.io.js')
     script(type='text/javascript' src='/dropzone.js')
     script(type='text/javascript' src='/ui-bootstrap-tpls.min.js')
