simple angular login and register with redirection

--- a/views/partials/home.jade
+++ b/views/partials/home.jade
@@ -1,2 +1,4 @@
 div(ng-controller='logoutController')
-  a.btn.btn-default(ng-click='logout()') Logout
+    a.btn.btn-default(ui-sref='one') Page One
+    a.btn.btn-default(ui-sref='two') Page Two
+    a.btn.btn-default(ng-click='logout()') Logout
