--- a/views/index.jade
+++ b/views/index.jade
@@ -1,16 +1,21 @@
 doctype html
-html(ng-app='myApp')
+html(ng-app='runwayApp')
     head
-        meta(charset='utf-8')
-        title MEAN Auth
-        link(href='//maxcdn.bootstrapcdn.com/bootswatch/3.3.4/yeti/bootstrap.min.css', rel='stylesheet')
-    div.container
-        div(ng-view='')
 
-    script(type='text/javascript', src='//code.jquery.com/jquery-2.1.4.min.js')
-    script(type='text/javascript', src='//maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js')
-    script(type='text/javascript', src='//cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.15/angular.min.js')
-    script(type='text/javascript', src='//cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.15/angular-route.min.js')
-    script(type='text/javascript', src='Scripts/main.js')
-    script(type='text/javascript', src='Scripts/services.js')
-    script(type='text/javascript', src='Scripts/controllers.js')
+        link(rel="stylesheet" href='/css/bootstrap.min.css')
+
+        script(type='text/javascript' src='/jquery.min.js')
+        script(type='text/javascript' src='/js/bootstrap.min.js')
+        script(type='text/javascript' src='/angular.js')
+        script(type='text/javascript' src='/angular-ui-router.min.js')
+        script(type='text/javascript' src='/angular-ui-router-title.js')
+        script(type='text/javascript', src='/Scripts/main.js')
+        script(type='text/javascript', src='/Scripts/services.js')
+        script(type='text/javascript', src='/Scripts/controllers.js')
+
+        title(ng-bind='("Runway - " + $title || "Runway")')
+        base(href='/')
+
+    div.container
+        div(ui-view='')
+
