--- a/views/partials/register.jade
+++ b/views/partials/register.jade
@@ -1,10 +1,10 @@
 div.col-md-4
   h1 Register
-    div.alert.alert-danger(ng-show='error')
+    div.alert.alert-danger(ng-show='error' ng-bind='error')
     form.form(ng-submit='register()')
       div.form-group
         label Username
-        input.form-control(type='text', name='username', ng-model='registerForm.username', required='')
+        input.form-control(type='text', name='username', ng-model='registerForm.username', required='' autofocus)
       div.form-group
         label Password
         input.form-control(type='password', name='password', ng-model='registerForm.password', required='')
