renamed main to index

--- a/views/index.jade
+++ b/views/index.jade
@@ -13,7 +13,7 @@ html(ng-app='runwayApp')
         script(type='text/javascript', src='/Scripts/homeApp.js')
         script(type='text/javascript', src='/angular-ui-router.min.js')
         script(type='text/javascript', src='/angular-ui-router-title.js')
-        script(type='text/javascript', src='/Scripts/main.js')
+        script(type='text/javascript', src='/Scripts/index.js')
         script(type='text/javascript', src='/Scripts/services.js')
         script(type='text/javascript', src='/Scripts/controllers.js')
 
