--- a/views/index.jade
+++ b/views/index.jade
@@ -2,17 +2,18 @@ doctype html
 html(ng-app='runwayApp')
     head
 
-        link(rel="stylesheet" href='/css/bootstrap.min.css')
-
-        link(rel='stylesheet' href='/Styles/style.css')
-        link(rel='stylesheet' href='/Styles/home.css')
+        link(rel="stylesheet", href='/css/bootstrap.min.css')
+        link(rel='stylesheet', href='/Styles/style.css')
+        link(rel='stylesheet', href='/Styles/navBar.css')
+        link(rel='stylesheet', href='/Styles/home.css')
 
         script(type='text/javascript', src='/angular.min.js')
         script(type='text/javascript', src='/jquery.min.js')
         script(type='text/javascript', src='/js/bootstrap.min.js')
-        script(type='text/javascript', src='/Scripts/homeApp.js')
         script(type='text/javascript', src='/angular-ui-router.min.js')
         script(type='text/javascript', src='/angular-ui-router-title.js')
+        script(type='text/javascript', src='/ui-bootstrap-tpls.min.js')
+        script(type='text/javascript', src='/angular-animate.min.js')
         script(type='text/javascript', src='/Scripts/index.js')
         script(type='text/javascript', src='/Scripts/services.js')
         script(type='text/javascript', src='/Scripts/controllers.js')
@@ -21,4 +22,5 @@ html(ng-app='runwayApp')
         base(href='/')
 
     body
-        div(ui-view='')
+        div(ui-view='navBar')
+        div(ui-view='content')
