--- a/views/partials/groups.jade
+++ b/views/partials/groups.jade
@@ -1,7 +1,8 @@
-link(rel='stylesheet' href='/Styles/groups.css')
-div.title Choose Your Group
-group-type-tabs
-div.scrollBox
-    div.alert.alert-danger(ng-bind='error' ng-show='error')
-    div(ng-repeat='group in groups | orderBy: name track by $index')
-        a.list-group-item.text-center(type='button' ng-href='/workspace?group={{group}}' target='_self' ng-bind='group')
+div.container
+    h1.groupsTitle Groups: {{groupType}}
+    div.container.tilePanel
+        div.alert.alert-danger(ng-bind='error' ng-show='error')
+        div(ng-repeat='group in groups | orderBy: name track by $index' ui-sref='home.one')
+            div.btn-primary
+                h2 {{group}}
+                p(ng-show='group.indexOf("wef") != -1') This is a long description of this groups and all the information you would ever want to know about it. More... Info... For... longth...
