--- a/views/partials/manage.jade
+++ b/views/partials/manage.jade
@@ -1,2 +1,9 @@
-link(rel='stylesheet' href='/Styles/manage.css')
-div.fillHeight(ui-view='')
+div.container
+    h1.groupsTitle Manage Groups
+    button.btn.btn-primary.addGroupButton(ng-click='openAddGroupModal()') Add Group
+    div.alert.alert-danger(ng-bind='error' ng-show='error')
+    div.container.tilePanel
+        div(ng-repeat='group in groups | orderBy: name track by $index' ui-sref='home.one')
+            div.btn-primary
+                h2 {{group}}
+                p(ng-show='group.indexOf("wef") != -1') This is a long description of this groups and all the information you would ever want to know about it. More... Info... For... longth...
