--- a/views/partials/register.jade
+++ b/views/partials/register.jade
@@ -1,12 +1,15 @@
-div.col-md-4
-  h1 Register
-    div.alert.alert-danger(ng-show='error' ng-bind='error')
-    form.form(ng-submit='register()')
-      div.form-group
-        label Username
-        input.form-control(type='text', name='username', ng-model='registerForm.username', required='' autofocus)
-      div.form-group
-        label Password
-        input.form-control(type='password', name='password', ng-model='registerForm.password', required='')
-      div
-        button.btn.btn-default(type='submit', ng-disabled='disabled') Register
+link(rel='stylesheet', href='/Styles/login.css')
+div.content
+    H1 Register
+    p.alert.alert-danger(ng-show='error' ng-bind='error')
+    form(ng-submit='register()')
+        div.form-group
+            label Username
+            input.form-control(type='text' name='username' ng-model='registerForm.username' required autofocus)
+        div.form-group
+            label Password
+            input.form-control(type='password' name='password' ng-model='registerForm.password' required)
+        div.form-group
+            p.col-xs-7 Need an account?
+                a(ui-sref='login') Signup
+            button.btn.btn-primary.col-xs-4#signInButton(type='submit') Register
