--- a/views/partials/navBar.jade
+++ b/views/partials/navBar.jade
@@ -1,7 +1,7 @@
 nav.navbar.navbar-default.navbar-fixed-top
     div.container-fluid
         div.navbar-header
-            button.navbar-toggle.collapsed(type='button', data-toggle='collapse', data-target='#bs-example-navbar-collapse-1', aria-expanded='false')
+            button.navbar-toggle.collapsed(type='button' data-toggle='collapse' data-target='#bs-example-navbar-collapse-1' aria-expanded='false')
                 span.sr-only
                 span.icon-bar
                 span.icon-bar
@@ -27,7 +27,7 @@ nav.navbar.navbar-default.navbar-fixed-top
                     a(ui-sref='home.manage') Manage
             ul.nav.navbar-nav.navbar-right
                 li.dropdown
-                    a.dropdown-toggle(data-toggle='dropdown' role='button' aria-haspopup='true' aria-expanded='false' ng-bind='user.username')
+                    a.dropdown-toggle(data-toggle='dropdown' role='button' aria-haspopup='true' aria-expanded='false') {{user.username}}
                         span.caret
                     ul.dropdown-menu
                         li.divider(role='separator')
