--- a/public/Styles/home.css
+++ b/public/Styles/home.css
@@ -1,21 +1,51 @@
-/*spacer for content under navBar*/
-div[ui-view='content'] {
+/*nav bar*/
+img.logo {
+    margin-top: -12px;
+    margin-left: -5px;
+    max-height: 45px;
+    pointer-events: none;
+}
+
+.homeUiView {
     margin-top: 80px;
 }
-/*spacer for content under end*/
+/*end nav bar*/
 
-
-/*group tiles*/
+/*tilePanel*/
 .tilePanel {
-    padding: 20px 0;
     text-align: center;
-    -moz-column-width: 18em;
-    -webkit-column-width: 18em;
 }
 
-.tilePanel > div {
-    display: inline-block;
-    width:  100%;
+@media only screen and (min-width: 400px) {
+    .tilePanel {
+        -moz-column-count: 1;
+        -webkit-column-count: 1;
+        column-count: 1;
+    }
+}
+
+@media only screen and (min-width: 700px) {
+    .tilePanel {
+        -moz-column-count: 2;
+        -webkit-column-count: 2;
+        column-count: 2;
+    }
+}
+
+@media only screen and (min-width: 900px) {
+    .tilePanel {
+        -moz-column-count: 3;
+        -webkit-column-count: 3;
+        column-count: 3;
+    }
+}
+
+@media only screen and (min-width: 1100px) {
+    .tilePanel {
+        -moz-column-count: 4;
+        -webkit-column-count: 4;
+        column-count: 4;
+    }
 }
 
 .tilePanel > div > div > h2 {
@@ -23,32 +53,30 @@ div[ui-view='content'] {
 }
 
 .tilePanel > div > div {
+    display: inline-block;
+    width: 100%;
     margin-top: 15px;
     margin-bottom: 5px;
     padding: 10px;
-    border: 1px solid transparent;
-    border-radius: 4px;
+    border-radius: 5px;
     cursor: pointer;
 }
 
 .tilePanel > div:hover > div {
     transform: translate(0px, -15px);
-    border: 1px solid #C8C8C8;
     box-shadow: rgba(0, 0, 0, 0.2) 0px 5px 5px 2px;
     opacity: 0.8;
     transition: 0.5s;
 }
-/*group tiles end*/
-
+/*end tilePanel*/
 
 /*manage page*/
-
-.groupsTitle {
-    float: left;
+div.relative {
+    position: relative;
 }
 .addGroupButton {
-    float: right;
-    position: relative;
-    top: 30px
+    position: absolute;
+    right: 0;
+    top: 0;
 }
-/*manage page end*/
+/*end manage page*/
