--- a/views/index.jade
+++ b/views/index.jade
@@ -1,11 +1,11 @@
 doctype html
 html(ng-app='runwayApp')
     head
-
-        link(rel="stylesheet", href='/css/bootstrap.min.css')
+        link(rel='stylesheet', href='/css/bootstrap.min.css')
         link(rel='stylesheet', href='/Styles/style.css')
-        link(rel='stylesheet', href='/Styles/navBar.css')
         link(rel='stylesheet', href='/Styles/home.css')
+        link(rel='stylesheet', href='/Styles/workspace.css')
+        link(rel='stylesheet', href='/jquery-ui-bundle/jquery-ui.min.css')
 
         script(type='text/javascript', src='/angular.min.js')
         script(type='text/javascript', src='/jquery.min.js')
@@ -14,6 +14,10 @@ html(ng-app='runwayApp')
         script(type='text/javascript', src='/angular-ui-router-title.js')
         script(type='text/javascript', src='/ui-bootstrap-tpls.min.js')
         script(type='text/javascript', src='/angular-animate.min.js')
+        script(type='text/javascript', src='/dropzone.js')
+        script(type='text/javascript', src='/jquery-ui-bundle/jquery-ui.min.js')
+        script(type='text/javascript', src='/jquery.ui.touch-punch.min.js')
+        script(type='text/javascript', src='/socket.io/socket.io.js')
         script(type='text/javascript', src='/Scripts/index.js')
         script(type='text/javascript', src='/Scripts/services.js')
         script(type='text/javascript', src='/Scripts/controllers.js')
