removed testing page 'one' and 'two' and removed unused code

--- a/views/partials/manage.jade
+++ b/views/partials/manage.jade
@@ -4,7 +4,7 @@ div.container
         button.btn.btn-primary.addGroupButton(ng-click='openAddGroupModal()') Add Group
         div.alert.alert-danger(ng-show='error' ng-bind='error')
         div.tilePanel
-            div(ng-repeat='group in groups | orderBy: name track by $index' ui-sref='home.one')
+            div(ng-repeat='group in groups | orderBy: name track by $index' ui-sref='home.manage')
                 div.btn-primary
                     h2 {{group}}
                     p(ng-show='group.indexOf("wef") != -1') This is a long description of this groups and all the information you would ever want to know about it. More... Info... For... longth...
