--- a/views/partials/navBar.jade
+++ b/views/partials/navBar.jade
@@ -6,15 +6,11 @@ nav.navbar.navbar-default.navbar-fixed-top
                 span.icon-bar
                 span.icon-bar
                 span.icon-bar
-            a.navbar-brand(ui-sref='home.groups({groupType: "owned"})')
+            a.navbar-brand(ui-sref='home.groups')
                 img.logo(src='/Images/title.png')
             span.navbar-brand Welcome {{username}}!
         #bs-example-navbar-collapse-1.collapse.navbar-collapse
             ul.nav.navbar-nav
-                li(ui-sref-active='active')
-                    a(ui-sref='home.one') One
-                li(ui-sref-active='active')
-                    a(ui-sref='home.two') Two
                 li.dropdown(ui-sref-active='active')
                     a.dropdown-toggle(data-toggle='dropdown' role='button' aria-haspopup='true' aria-expanded='false') Groups
                         span.caret
