--- a/views/partials/login.jade
+++ b/views/partials/login.jade
@@ -1,6 +1,6 @@
 link(rel='stylesheet', href='/Styles/login.css')
 div.content
-    H1 Login
+    h1 Login
     p.alert.alert-danger(ng-show='error' ng-bind='error')
     form(ng-submit='login()')
         div.form-group
