--- a/views/partials/register.jade
+++ b/views/partials/register.jade
@@ -1,6 +1,6 @@
 link(rel='stylesheet', href='/Styles/login.css')
 div.content
-    H1 Register
+    h1 Register
     p.alert.alert-danger(ng-show='error' ng-bind='error')
     form(ng-submit='register()')
         div.form-group
