--- a/public/Styles/style.css
+++ b/public/Styles/style.css
@@ -1,6 +1,6 @@
 body {
     font: 14px 'Lucida Grande', Helvetica, Arial, sans-serif;
-    background: url(/Images/background.jpg) no-repeat center center fixed;
+    background: url(/images/background.jpg) no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
