--- a/views/partials/navBar.jade
+++ b/views/partials/navBar.jade
@@ -7,7 +7,7 @@ nav.navbar.navbar-default.navbar-fixed-top
                 span.icon-bar
                 span.icon-bar
             a.navbar-brand(ui-sref='home.groups')
-                img.logo(src='/Images/title.png')
+                img.logo(src='/images/title.png')
             span.navbar-brand Welcome {{username}}!
         #bs-example-navbar-collapse-1.collapse.navbar-collapse
             ul.nav.navbar-nav
