changed date from number to date object

--- a/views/partials/addGroupModal.jade
+++ b/views/partials/addGroupModal.jade
@@ -2,7 +2,7 @@
     h3.modal-title Create a new Group
 .modal-body
     .alert.alert-danger(ng-show='error' ng-bind='error')
-    form.form-horizontal(ng-submit='addGroup()')
+    div.form-horizontal
         .form-group
             label.col-xs-3.control-label Group Name:
             .col-xs-9
